<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.aid.ui.info.infoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.aid.ui.dashboard.DashboardFragment"
        android:label="@string/title_task_resources"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.aid.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_notificationsM"
        android:name="com.example.aid.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.example.aid.ui.forum.ForumFragment"
        android:label="Forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.aid.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

</navigation>