<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/resources_sponsor"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:text="@string/TR_sponsor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/resources_sponsor_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/resources_sponsor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resources_location"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="@string/TR_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resources_sponsor"/>

    <TextView
        android:id="@+id/resources_location_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/resources_location"
        app:layout_constraintTop_toTopOf="@id/resources_sponsor_detail" />

    <TextView
        android:id="@+id/resources_resources_time"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:text="@string/R_time"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resources_sponsor"/>

    <TextView
        android:id="@+id/resources_resources_time_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/resources_resources_time"
        app:layout_constraintTop_toTopOf="@id/resources_location_detail" />

    <TextView
        android:id="@+id/resources_content"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="60dp"
        android:text="@string/R_content"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resources_sponsor"/>

    <TextView
        android:id="@+id/resources_content_detail"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/resources_content"
        app:layout_constraintTop_toTopOf="@id/resources_resources_time_detail" />

    <TextView
        android:id="@+id/resources_recipient"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="140dp"
        android:background="#FFFFFF"
        android:text="@string/finish_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resources_sponsor"/>

    <TextView
        android:id="@+id/resources_recipient_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/resources_recipient"
        app:layout_constraintTop_toTopOf="@id/resources_content_detail" />

    <TextView
        android:id="@+id/resources_status"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="120dp"
        android:background="#FFFFFF"
        android:text="@string/recipient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resources_sponsor"/>

    <TextView
        android:id="@+id/resources_status_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/resources_recipient"
        app:layout_constraintTop_toTopOf="@id/resources_content_detail" />


    <Button
        android:id="@+id/chat_with_resources_sponsor"
        android:text="@string/chat_with_sponsor_button"
        android:background="@drawable/btn_circle"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resources_content_detail" />

    <Button
        android:id="@+id/accept_resources"
        android:text="@string/accept_TR"
        android:background="@drawable/btn_circle"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resources_content_detail" />

    <Button
        android:id="@+id/star_resources"
        android:text="@string/star"
        android:background="@drawable/btn_circle"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/resources_content_detail" />
</androidx.constraintlayout.widget.ConstraintLayout>