<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/task_sponsorM"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:text="@string/TR_sponsor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/task_sponsor_detailM"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/task_sponsorM"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_locationM"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="@string/TR_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/task_sponsorM"/>

    <TextView
        android:id="@+id/task_location_detailM"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:background="#FFFFFF"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/task_locationM"
        app:layout_constraintTop_toTopOf="@id/task_sponsor_detailM" />

    <TextView
        android:id="@+id/task_task_timeM"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:background="#FFFFFF"
        android:text="@string/T_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/task_sponsorM"/>

    <TextView
        android:id="@+id/task_task_time_detailM"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/task_task_timeM"
        app:layout_constraintTop_toTopOf="@id/task_location_detailM" />

    <TextView
        android:id="@+id/task_contentM"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        android:text="@string/T_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/task_sponsorM"/>

    <TextView
        android:id="@+id/task_content_detailM"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/task_contentM"
        app:layout_constraintTop_toTopOf="@id/task_task_time_detailM" />

    <Button
        android:id="@+id/delete_taskM"
        android:text="@string/delete"
        android:background="#EFAA52"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/task_content_detailM" />
</androidx.constraintlayout.widget.ConstraintLayout>