<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


    <Button
        android:id="@+id/task_list"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:text="@string/task_tab"
        android:background="#EFAA52"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/resources_list"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="0dp"
        android:text="@string/resources_tab"
        android:background="#EFAA52"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@id/task_list"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/new_task_resources"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="0dp"
        android:text="@string/new_button_tab"
        android:background="#EFAA52"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@id/resources_list"
        app:layout_constraintTop_toTopOf="parent"/>

    <ListView
        android:id="@+id/task_resources_list"
        android:layout_width="405dp"
        android:layout_height="660dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resources_list" />
</androidx.constraintlayout.widget.ConstraintLayout>