<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/rec_task_ID"/>
    <TextView
        android:id="@+id/rec_sponsor"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        android:text="@string/TR_sponsor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/rec_sponsor_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/rec_sponsor"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rec_type"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="类型"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/rec_type_text"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/rec_type"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/rec_location"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="@string/TR_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rec_type"/>

    <TextView
        android:id="@+id/rec_location_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:background="#FFFFFF"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/rec_location"
        app:layout_constraintTop_toTopOf="@id/rec_sponsor_detail" />

    <TextView
        android:id="@+id/rec_task_time"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        android:text="时间"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rec_sponsor"/>

    <TextView
        android:id="@+id/rec_task_time_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/rec_task_time"
        app:layout_constraintTop_toTopOf="@id/rec_location_detail" />

    <TextView
        android:id="@+id/rec_content"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="80dp"
        android:background="#FFFFFF"
        android:text="内容"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rec_sponsor"/>

    <TextView
        android:id="@+id/rec_content_detail"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/rec_content"
        app:layout_constraintTop_toTopOf="@id/rec_task_time_detail" />

    <TextView
        android:id="@+id/rec_recipient"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="140dp"
        android:background="#FFFFFF"
        android:text="@string/finish_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rec_sponsor"/>

    <TextView
        android:id="@+id/rec_recipient_detail"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/rec_recipient"
        app:layout_constraintTop_toTopOf="@id/rec_content_detail" />

    <Button
        android:id="@+id/rec_chat_with_task_sponsor"
        android:text="@string/chat_with_sponsor_button"
        android:background="@drawable/btn_circle"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rec_content_detail" />

    <Button
        android:id="@+id/rec_accept_task"
        android:text="已认领"
        android:background="@drawable/btn_circle_gray"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rec_content_detail" />

</androidx.constraintlayout.widget.ConstraintLayout>